--- a/Categories/templates/travel-template-1.html
+++ b/Categories/templates/travel-template-1.html
@@ -82,13 +82,6 @@
             transform: translateY(-5px);
         }
         
-        .package-image {
-            height: 180px;
-            background-size: cover;
-            background-position: center;
-            
-        }
-        
         .package-content {
             padding: 20px;
         }
@@ -175,7 +168,7 @@
     
     <div class="packages-container">
         <div class="package">
-            <div class="package-image" style="background-image: url('../templates/assets/dubai_card.png');"></div>
+            <img src="../templates/assets/dubai_card.png" alt="Dubai" style="width:100%; height:180px; object-fit:cover;">
             <div class="package-content">
                 <div class="destination">Abu Dhabi</div>
                 <div class="description">Explore The Wonders Of Dubai</div>
@@ -184,7 +177,7 @@
         </div>
         
         <div class="package">
-            <div class="package-image" style="background-image: url('../templates/assets/dubai_card.png');"></div>
+            <img src="../templates/assets/dubai_card.png" alt="Dubai" style="width:100%; height:180px; object-fit:cover;">
             <div class="package-content">
                 <div class="destination">Kandy</div>
                 <div class="description">Explore The Wonders Of Sri Lanka</div>
@@ -203,7 +196,7 @@
     
     <div class="packages-container">
         <div class="package">
-            <div class="package-image" style="background-image: url('../templates/assets/dubai_card.png');"></div>
+            <img src="../templates/assets/dubai_card.png" alt="Dubai" style="width:100%; height:180px; object-fit:cover;">
             <div class="package-content">
                 <div class="destination">Abu Dhabi</div>
                 <div class="description">Explore The Wonders Of Dubai</div>
@@ -212,7 +205,7 @@
         </div>
         
         <div class="package">
-            <div class="package-image" style="background-image: url('../templates/assets/dubai_card.png');"></div>
+            <img src="../templates/assets/dubai_card.png" alt="Dubai" style="width:100%; height:180px; object-fit:cover;">
             <div class="package-content">
                 <div class="destination">Kandy</div>
                 <div class="description">Explore The Wonders Of Sri Lanka</div>
